--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>  
+<html>  
+    <head> 
+        <title>Slideshow</title>
+	</head> 
+	 <script src="something.js"></script>
 <div id="slideshow-example" data-component="slideshow">
 		<div role="list">
 			<div class="slide">
@@ -23,27 +29,3 @@
   text-align: center;
 }
 
-[data-component="slideshow"] .slide.active {
-	display: block;
-}                                                     
-                           
-    var slideshows = document.querySelectorAll('[data-component="slideshow"]');
-slideshows.forEach(initSlideShow);
-
-function initSlideShow(slideshow) {
-
-	var slides = document.querySelectorAll(`#${slideshow.id} [role="list"] .slide`);
-
-	var index = 0, time = 5000;
-	slides[index].classList.add('active');
-
-	setInterval( () => {
-		slides[index].classList.remove('active');
-		
-		index++;
-		if (index === slides.length) index = 0;
-
-		slides[index].classList.add('active');
-
-	}, time);
-}
