--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>  
     <head> 
         <title>Slideshow</title>
+	     <link rel="stylesheet" href="styles.css">
 	</head> 
 	 <body>
 <div id="slideshow-example" data-component="slideshow">
